--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="jutils-1.0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="jinput.jar"/>
-	<classpathentry kind="lib" path="jinput-test.jar"/>
+	<classpathentry kind="lib" path="Jars/jinput.jar"/>
+	<classpathentry kind="lib" path="Jars/jutils-1.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="Jars/lwjgl_util_applet.jar"/>
+	<classpathentry kind="lib" path="Jars/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="Jars/lwjgl-debug.jar"/>
+	<classpathentry kind="lib" path="Jars/lwjgl.jar"/>
+	<classpathentry kind="lib" path="Jars/mysql-connector-java-5.1.38-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
